# tracer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.new  README.md
cmake/dependencies/internal/: SetupImGui.cmake
cmake/modules/: FindUSD.cmake
cmake/setup/: CXX.cmake  Options.cmake
src/: CMakeLists.txt  main.cpp
src/backend/cpu/: CMakeLists.txt  spindulysBackendCPU.h
src/backend/cpu/bsdf/: bsdf.h  lambert.cpp  lambert.h  orennayar.cpp  orennayar.h
src/backend/cpu/camera/: camera.h  cpuCamera.cpp  cpuCamera.h
src/backend/cpu/geometry/: cpuGeometry.cpp  cpuGeometry.h  cpuQuadmesh.cpp  cpuQuadmesh.h  cpuTrianglemesh.cpp  cpuTrianglemesh.h
src/backend/cpu/integrator/: debug.cpp  debug.h  diffuse.cpp  diffuse.h  integrator.cpp  integrator.h  normal.cpp  normal.h  occlusion.cpp  occlusion.h  position.cpp  position.h  udpt.cpp  udpt.h
src/backend/cpu/render/: cpuRenderManager.cpp  cpuRenderManager.h
src/backend/cpu/scene/: cpuScene.cpp  cpuScene.h
src/backend/cpu/utils/: helperStructs.h  ray.h
src/bsdf/: bsdf.h  lambert.h  orennayar.cpp  orennayar.h
src/camera/: camera.h
src/frontend/: CMakeLists.txt  spindulysFrontend.h
src/frontend/bsdf/: bsdf.h  lambert.cpp  lambert.h  orennayar.cpp  orennayar.h
src/frontend/camera/: camera.cpp  camera.h
src/frontend/geometry/: curve.h  geometry.cpp  geometry.h  quadmesh.cpp  quadmesh.h  subdivmesh.h  trianglemesh.cpp  trianglemesh.h
src/frontend/integrator/: debug.cpp  debug.h  diffuse.cpp  diffuse.h  integrator.cpp  integrator.h  normal.cpp  normal.h  occlusion.cpp  occlusion.h  position.cpp  position.h  udpt.cpp  udpt.h
src/frontend/material/: default.cpp  default.h  diffuse.cpp  diffuse.h  disney.cpp  disney.h  empirical.cpp  empirical.h  material.h
src/frontend/render/: renderManager.cpp  renderManager.h  rendermanager.cpp  rendermanager.h
src/frontend/sampling/: sampler.cpp  sampler.h
src/frontend/scene/: scene.cpp  scene.h  scenemanager.cpp  scenemanager.h
src/frontend/shapes/: buffer.cpp  buffer.h  curve.cpp  curve.h  geometry.cpp  geometry.h  quadmesh.cpp  quadmesh.h  ray.h  subdivmesh.cpp  subdivmesh.h  trianglemesh.cpp  trianglemesh.h
src/frontend/utils/: color_helper.h  helperStructs.h  output_helper.h  render_helper.h  usd_helper.h
src/gui/: CMakeLists.txt  main.cpp  output_helper.h  spindulysGUI.h  window.cpp  window.h
src/gui/opengl/: glshader.cpp  glshader.h
src/integrator/: debug.cpp  diffuse.h  integrator.h  normal.cpp  occlusion.h  position.cpp  udpt.cpp  udpt.h
src/material/: diffuse.cpp  diffuse.h  disney.h  empirical.cpp  empirical.h  material.h
src/object/: buffer.cpp  buffer.h  geometry.h  quadmesh.cpp  ray.h
src/render/: rendermanager.cpp  rendermanager.h
src/sampling/: sampler.cpp  sampler.h
src/scene/: scenemanager.cpp  scenemanager.h
src/share/: CMakeLists.txt  config.h  spindulys.h
src/share/spindulys/: buffer.h  mathHelper.h  platform.h  sampler.h
src/share/spindulys/math/: affinespace.h  bbox.h  col3.h  col4.h  color.h  constants.h  interval.h  lbbox.h  linearspace2.h  linearspace3.h  math.h  obbox.h  quaternion.h  range.h  vec2.h  vec3.h  vec4.h
src/share/spindulysMath/: helper.h
src/utility/: output_helper.h  render_helper.h
